--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "CRUDBuddy",
+  "name": "crudbuddy",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,14 +9,11 @@
     "firebase": "^8.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-fade-in": "^2.0.1",
     "react-redux": "^7.1.3",
-    "react-redux-firebase": "^3.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "redux": "^4.0.5",
-    "redux-firestore": "^0.12.0",
-    "web-vitals": "^1.1.1"
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
