--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "_CRUDBuddy",
+  "name": "CRUDBuddy CRUD Generator",
   "icons": [
     {
       "src": "favicon.ico",
@@ -10,12 +10,7 @@
     {
       "src": "logo192.png",
       "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "260x260"
     }
   ],
   "start_url": ".",
